traefik/minimalist-ingress-ssl.yaml
---
# Ingress with SSL
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimalist-ingress
  namespace: lightsspeed
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - tasks.deployone.cloud
    secretName: tasks-tls
  rules:
  - host: tasks.deployone.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lightsspeed-mini-service
            port:
              number: 80
